<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">指纹登记管理</string>
    <string name="activity_name">指纹登记</string>
    <string name="action_settings">Settings</string>
    <string name="hint_string">提示信息</string>
    <string name="identify_string">连续比对</string>
    <string name="verify_string">指纹验证</string>
    <string name="enroll_string">注册指纹</string>
    <string name="get_count_string">获取用户数量</string>
    <string name="remove_string">删除当前ID</string>
    <string name="remove_all_string">设置托管机构</string>
    <string name="recv_bitmap_string">获取图像</string>
    <string name="up_char_string">上传特征值</string>
    <string name="cancel_string">取消</string>
    <string name="string_mode_name">连接模式：</string>
    <string name="string_mode_usb_value">USB模式</string>
    <string name="string_mode_uart_value">串口模式</string>
    <string name="string_uart_name">串口端口：</string>
    <string name="string_device_off_on_name">设备开关：</string>
    <string name="string_count_name">指纹容量：</string>
    <string name="string_id_name">当前ID值：</string>

    <!-- info -->
    <string name="string_get_count_success" formatted="false">获取成功。用户数%d个</string>
    <string name="string_enrolling" formatted="false">注册指纹第%d步，请按下手指，总共需要输入%d次指纹信息</string>
    <string name="string_enroll_success" formatted="false">注册成功，对应id为%d</string>
    <string name="string_verify_success" formatted="false">匹配成功，对应id为%d，总耗时%dms</string>
    <string name="string_verify_failed" formatted="false">没有匹配到指纹信息，耗时%dms</string>
    <string name="string_remove_id_success" formatted="false">成功删除id号为%d的指纹信息</string>
    <string name="string_remove_id_failed">此id号未注册</string>
    <string name="string_remove_all_id_success">已清空指纹信息</string>
    <string name="string_remove_all_id_failed">指纹库已清空</string>
    <string name="string_collect_start">正在采集指纹，请在采集器上按下手指</string>
    <string name="string_collect_end">采集完成，请松开手指</string>
    <string name="string_recv_bimap_percent" formatted="false">正在上传图像：%d%%</string>
    <string name="string_recv_bitmap_end">获取成功</string>
    <string name="string_match_success" formatted="false">匹配成功，对应的id为%d</string>
    <string name="string_set_char_success" formatted="false">特征值保存成功，对应的id为%d</string>
    <string name="string_get_char_success" formatted="false">成功读取特征值，对应的id为%d，保存路径为%s</string>

    <!-- error -->
    <string name="string_device_connection_success">设备已成功连接</string>
    <string name="string_device_dis_connection">设备已断开</string>
    <string name="string_device_not_found">当前没有找到设备</string>
    <string name="string_device_permission_denied">当前设备没有操作权限</string>
    <string name="string_err_fail">指令处理失败</string>
    <string name="string_err_connection">设备已断开连接</string>
    <string name="string_err_verify">与指定编号的指纹验证失败</string>
    <string name="string_err_identify">当前输入的指纹不存在</string>
    <string name="string_err_tmpl_empty">当前指定的id不存在</string>
    <string name="string_err_tmpl_not_empty">当前指定的id已存在</string>
    <string name="string_err_all_tmpl_empty">当前id没有注册</string>
    <string name="string_err_tmpl_empty_no_exist">指纹信息已存满</string>
    <string name="string_err_tmpl_broken_no_exist">没有检测到损坏的指纹</string>
    <string name="string_err_tmp_invalid">指定的指纹信息无效</string>
    <string name="string_err_tmp_duplication">该指纹已注册</string>
    <string name="string_err_bad_qualy">指纹图像质量不佳</string>
    <string name="string_err_merge_failed">指纹合成失败</string>
    <string name="string_err_auth">没有进行通讯密码确认</string>
    <string name="string_err_memory">外部 Flash 烧写出错</string>
    <string name="string_err_invalid_tmpl_id">id值无效</string>
    <string name="string_err_invalid_param">请求参数无效</string>
    <string name="string_err_time_out">指纹输入超时</string>
    <string name="string_err_gen_count">指纹合成个数无效</string>
    <string name="string_err_invalid_buffer_id">buffer id值无效</string>
    <string name="string_err_invalid_operation_mode">无效操作</string>
    <string name="string_err_not_detectd">当前没有检测到指纹输入</string>
    <string name="string_err_cancel">当前操作已被手动取消</string>
    <string name="string_err_unknow">出现未知错误</string>
    <string name="string_err_code_format" formated="false">（错误代码：%s）</string>
    <string name="title_activity_setting">Setting</string>
    <string name="hello_world">Hello world!</string>

    <!-- setting -->
    <string name="devicinit">设备初始化</string>
    <string name="deviceid">设备编号:</string>
    <string name="accountid">机构账号:</string>
    <string name="fdevice_status">指纹机状态:</string>
    <string name="maintainer_name">维护人姓名:</string>
    <string name="maintainer_phone">维护人电话:</string>
    <string name="button_ok">确定</string>
    <string name="button_cancer">取消</string>
    <string name="title_activity_registfinger">RegistfingerActivity</string>
    <string name="title_activity_searchchrid_acivity">searchchrid</string>

    <!-- registerChirld -->
    <string name="choicechrildren">选择孩子</string>
    <string name="chrildrenaccountid">孩子账号:</string>
    <string name="chrildname">孩子姓名:</string>
    <string name="parentgname">家长姓名:</string>
    <string name="parentphone">家长电话:</string>
    
    <string name="lchrildrenaccountid">孩子账号</string>
    <string name="lchrildname">孩子姓名</string>
    <string name="lparentgname">家长姓名</string>
    <string name="lparentphone">家长电话</string>
    
    <string name="title_activity_search_chrildren">SearchChrildrenActivity</string>

</resources>