<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/base_background"
    android:orientation="vertical" >

    <TextView
        style="@style/Title_text"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_name" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/preference_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_mode_name" />

                <Spinner
                    android:id="@+id/id_spinner_modes"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/base_widget_bg" />
            </LinearLayout>

            <ImageView
                android:id="@+id/id_image_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    style="@style/preference_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_uart_name" />

                <Spinner
                    android:id="@+id/id_spinner_uarts"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/base_widget_bg"
                    android:minHeight="30dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    style="@style/preference_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_device_off_on_name" />

                <CheckBox
                    android:id="@+id/id_chk_offs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/checkbox_bg"
                    android:button="@null"
                    android:checked="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    style="@style/preference_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_count_name" />

                <TextView
                    android:id="@+id/id_txt_size"
                    style="@style/widget_base_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/base_widget_bg"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    style="@style/preference_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_id_name" />

                <Spinner
                    android:id="@+id/id_spinner_ids"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/base_widget_bg" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/id_txt_info"
        style="@style/info_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/base_widget_bg"
        android:minHeight="@dimen/layout_info_min_height"
        android:text="@string/hint_string" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_layout_margin_top" >

        <TextView
            android:id="@+id/id_btn_enroll"
            style="@style/button_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/drawable_btn_enroll"
            android:text="@string/enroll_string" />

        <TextView
            android:id="@+id/id_btn_identify"
            style="@style/button_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/drawable_btn_identify"
            android:text="@string/identify_string" />

        
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_layout_margin_top" >

        

                <TextView
            android:id="@+id/id_btn_cancel"
            style="@style/button_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/drawable_btn_cancel"
            android:text="@string/cancel_string" />

        <TextView
            android:id="@+id/id_btn_remove_all"
            style="@style/button_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/drawable_btn_remove_all"
            android:text="@string/remove_all_string" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_layout_margin_top" >

        

        


    </LinearLayout>

</LinearLayout>